--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -14,6 +14,8 @@
   .empty-message {
     font-size: 18px;
     margin: 50px auto;
+    color: #999;
+    text-align: center;
   }
 
   .cart-items {
